Fix a VERY old bug which prevents creating new desktop files in order to associate them with mimetypes. Lately the symptom was the ASSERT(m_pService) in kopenwithdialog; before that (including in kde-3.x) it would just not work. The cause for all this: distro-modified applications.menu where "Lost & Found" was removed. The fix: adding the service to the factory as soon as we parse the .desktop file, independenly from whether it matches a menu category or not.

BUG: 178561

svn path=/trunk/KDE/kdelibs/; revision=901685